added giphy support

--- a/web-start/index.html
+++ b/web-start/index.html
@@ -111,6 +111,20 @@
 <!-- ***********************************************************************************************************************
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
+
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAAf6oL0yT8IEekrh7wTkzyNxnzCu-swT0",
+    authDomain: "fir-chat-281a5.firebaseapp.com",
+    databaseURL: "https://fir-chat-281a5.firebaseio.com",
+    storageBucket: "fir-chat-281a5.appspot.com",
+    messagingSenderId: "259474457194"
+  };
+  firebase.initializeApp(config);
+</script>
+
 <script src="scripts/main.js"></script>
 </body>
 </html>
